--- a/KretaBasicSchoolSystem.Desktop/Resources/ViewModelViewDataTamplate.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Resources/ViewModelViewDataTamplate.xaml
@@ -4,6 +4,8 @@
                     xmlns:controlPanelView="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.ControlPanel"
                     xmlns:schoolCitizensViewModels="clr-namespace:KretaBasicSchoolSystem.Desktop.ViewModels.SchoolCitizens"
                     xmlns:schoolCitizensView="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens"
+                    xmlns:schoolClassesViewModels="clr-namespace:KretaBasicSchoolSystem.Desktop.ViewModels.SchoolClasses"
+                    xmlns:schoolClassView="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolClasses"
                     >
     <DataTemplate DataType="{x:Type controlPanelViewModels:ControlPanelViewModel}">
         <controlPanelView:ControlPanelView/>
@@ -13,5 +15,8 @@
     </DataTemplate>
     <DataTemplate DataType="{x:Type schoolCitizensViewModels:StudentViewModel}">
         <schoolCitizensView:StudentView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type schoolClassesViewModels:SchoolClassesViewModel}">
+        <schoolClassView:SchoolClassesView/>
     </DataTemplate>
 </ResourceDictionary>
