--- a/KretaBasicSchoolSystem.Desktop/Resources/ViewModelViewDataTamplate.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Resources/ViewModelViewDataTamplate.xaml
@@ -6,6 +6,8 @@
                     xmlns:schoolCitizensView="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens"
                     xmlns:schoolClassesViewModels="clr-namespace:KretaBasicSchoolSystem.Desktop.ViewModels.SchoolClasses"
                     xmlns:schoolClassView="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolClasses"
+                    xmlns:schoolSubjectsViewModel="clr-namespace:KretaBasicSchoolSystem.Desktop.ViewModels.SchoolSubjects"
+                    xmlns:schoolSubjectsView="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolSubjects"
                     >
     <DataTemplate DataType="{x:Type controlPanelViewModels:ControlPanelViewModel}">
         <controlPanelView:ControlPanelView/>
@@ -18,5 +20,8 @@
     </DataTemplate>
     <DataTemplate DataType="{x:Type schoolClassesViewModels:SchoolClassesViewModel}">
         <schoolClassView:SchoolClassesView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type schoolSubjectsViewModel:SchoolSubjectsViewModel}">
+        <schoolSubjectsView:SchoolSubjectsView/>
     </DataTemplate>
 </ResourceDictionary>
