--- a/KretaBasicSchoolSystem.Desktop/Views/Menu.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/Menu.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:KretaBasicSchoolSystem.Desktop.Views"
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
+             xmlns:viewModels="clr-namespace:KretaBasicSchoolSystem.Desktop.ViewModels"
+             d:DataContext="{d:DesignInstance Type=viewModels:MainViewModel, IsDesignTimeCreatable=True}"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="250">
     <StackPanel>
@@ -55,14 +57,17 @@
                         </StackPanel>
                     </RadioButton>
                     <RadioButton Style="{StaticResource menuButton}"
-                             Tag="{StaticResource colorMidleGreen}">
+                             Tag="{StaticResource colorMidleGreen}"
+                             Command="{Binding ShowSchoolClassesCommand}"
+                             >
                         <StackPanel Orientation="Horizontal">
                             <fa:IconImage Icon="ChalkboardUser" Style="{StaticResource menuButtonIcon}"/>
                             <TextBlock Text="Osztályok" Style="{StaticResource menuButtonText}"/>
                         </StackPanel>
                     </RadioButton>
                     <RadioButton Style="{StaticResource menuButton}"
-                             Tag="{StaticResource colorMidleGreen}">
+                             Tag="{StaticResource colorMidleGreen}"
+                             Command="{Binding ShowSchoolSubjectsCommand}">
                         <StackPanel Orientation="Horizontal">
                             <fa:IconImage Icon="GraduationCap" Style="{StaticResource menuButtonIcon}"/>
                             <TextBlock Text="Tantárgyak" Style="{StaticResource menuButtonText}"/>
