--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/TeacherView.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolCitizens/TeacherView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Label>Szülők</Label>           
+        <Label>Tanárok</Label>           
     </Grid>
 </UserControl>
