--- a/KretaBasicSchoolSystem.Desktop/Views/Menu.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/Menu.xaml
@@ -73,6 +73,14 @@
                             <TextBlock Text="Tantárgyak" Style="{StaticResource menuButtonText}"/>
                         </StackPanel>
                     </RadioButton>
+                    <RadioButton Style="{StaticResource menuButton}"
+                                 Tag="{StaticResource colorMidleGreen}"
+                                 Command="{Binding ShowGradesCommand}">
+                        <StackPanel Orientation="Horizontal">
+                            <fa:IconImage Icon="TachographDigital" Style="{StaticResource menuButtonIcon}"/>
+                            <TextBlock Text="Osztályzatok" Style="{StaticResource menuButtonText}"/>
+                        </StackPanel>
+                    </RadioButton>
                 </StackPanel>
             </StackPanel>
         </Border>
