--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/HYear.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/HYear.xaml
@@ -1,6 +1,4 @@
-﻿
-
-<UserControl x:Class="KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens.ParentView"
+﻿<UserControl x:Class="KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens.HYear"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Label>Szülők</Label>           
+        <Label>Félév zárás</Label>           
     </Grid>
 </UserControl>
