--- a/KretaBasicSchoolSystem.Desktop/Resources/ViewModelViewDataTamplate.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Resources/ViewModelViewDataTamplate.xaml
@@ -8,6 +8,8 @@
                     xmlns:schoolClassView="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolClasses"
                     xmlns:schoolSubjectsViewModel="clr-namespace:KretaBasicSchoolSystem.Desktop.ViewModels.SchoolSubjects"
                     xmlns:schoolSubjectsView="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolSubjects"
+                    xmlns:schoolGradesViewModel="clr-namespace:KretaBasicSchoolSystem.Desktop.ViewModels.SchoolGrades"
+                    xmlns:schoolGradesView="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolGrades"
                     >
     <DataTemplate DataType="{x:Type controlPanelViewModels:ControlPanelViewModel}">
         <controlPanelView:ControlPanelView/>
@@ -27,7 +29,23 @@
     <DataTemplate DataType="{x:Type schoolClassesViewModels:SchoolClassesViewModel}">
         <schoolClassView:SchoolClassesView/>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type schoolGradesViewModel:SchoolGradesViewModel}">
+        <schoolGradesView:GradesView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type schoolGradesViewModel:CurrentLessonViewModel}">
+        <schoolGradesView:CurrentLesson/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type schoolGradesViewModel:EYearViewModel}">
+        <schoolGradesView:EYearView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type schoolGradesViewModel:HYearViewModel}">
+        <schoolGradesView:HYearView/>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type schoolGradesViewModel:TClassesViewModel}">
+        <schoolGradesView:TClassesView/>
+    </DataTemplate>
     <DataTemplate DataType="{x:Type schoolSubjectsViewModel:SchoolSubjectsViewModel}">
         <schoolSubjectsView:SchoolSubjectsView/>
     </DataTemplate>
+    
 </ResourceDictionary>
