--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/CurrentLesson.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/CurrentLesson.xaml
@@ -1,6 +1,6 @@
 ﻿
 
-<UserControl x:Class="KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens.CurrentLesson"
+<UserControl x:Class="KretaBasicSchoolSystem.Desktop.Views.SchoolGrades.CurrentLesson"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
