--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/GradesMenu.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/GradesMenu.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:viewModels="clr-namespace:KretaBasicSchoolSystem.Desktop.ViewModels.SchoolGrades"
              d:DataContext="{d:DesignInstance Type=viewModels:SchoolGradesViewModel, IsDesignTimeCreatable=True}"
-             xmlns:local="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens"
+             xmlns:local="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolGrades"
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="800">
     <Border Background="{StaticResource backgroundColorThird}"> 
@@ -16,7 +16,7 @@
                 Width="150"
                 Margin="32 0 0 0"
                 Content="Aktuális óra"
-                Command="{Binding ShowCurrentLesson}"
+                Command="{Binding ShowCurrentLessonViewCommand}"
             />
             <Button 
                 Style="{StaticResource subMenuButton}"
@@ -24,7 +24,7 @@
                 Width="150"
                 Margin="12 0 0 0"
                 Content="Tanított osztályok"
-                Command="{Binding ShowTClasses}"
+                Command="{Binding ShowtTClassesViewCommand}"
             />
             <Button 
                 Style="{StaticResource subMenuButton}"           
@@ -32,14 +32,14 @@
                 Width="150"
                 Margin="12 0 0 0"
                 Content="Félév zárás"
-                Command="{Binding ShowHYear}"
+                Command="{Binding ShowHYearViewCommand}"
              /><Button 
                 Style="{StaticResource subMenuButton}"           
                 HorizontalAlignment="Left"
                 Width="150"
                 Margin="12 0 0 0"
                 Content="Év vége zárás"
-                Command="{Binding ShowEYear}"
+                Command="{Binding ShowEYearViewCommand}"
              />
         </StackPanel>
     </Border>
