--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/HYearView.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/HYearView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens.HYear"
+﻿<UserControl x:Class="KretaBasicSchoolSystem.Desktop.Views.SchoolGrades.HYearView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens"
+             xmlns:local="clr-namespace:KretaBasicSchoolSystem.Desktop.Views.SchoolGrades"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
