--- a/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/TClassesView.xaml
+++ b/KretaBasicSchoolSystem.Desktop/Views/SchoolGrades/TClassesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="KretaBasicSchoolSystem.Desktop.Views.SchoolCitizens.TClasses"
+﻿<UserControl x:Class="KretaBasicSchoolSystem.Desktop.Views.SchoolGrades.TClassesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
